Complete Netflix Website

--- a/index.html
+++ b/index.html
@@ -282,19 +282,15 @@
           <footer class=" text-white">
             <div class="container p-4">
               <section class="mb-4">
-                <a href="">
-                  <img src="./Netflix-Images/Facebook.png" width="35px">
-                </a>
-  
-                <a href="">
+                <a href="https://github.com/Mr-Siddhant-Bagul">
                   <img src="./Netflix-Images/github.jpg" width="35px">
                 </a>
   
-                <a href="">
+                <a href="https://instagram.com/mr_siddhant_bagul?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">
                   <img src="./Netflix-Images/instagram.png" width="35px">
                 </a>
   
-                <a href="">
+                <a href="https://siddhant-bagul.netlify.app/">
                   <img src="./Netflix-Images/portfolio.png" width="35px">
                 </a>
               </section>
