--- a/index.html
+++ b/index.html
@@ -283,7 +283,9 @@
             <div class="container p-4">
               <section class="mb-4">
                 <a href="https://github.com/Mr-Siddhant-Bagul">
-                  <img src="./Netflix-Images/github.jpg" width="45px">
+                  <img src="./Netflix-Images/github.jpg" width="4
+                  
+                  5px">
                 </a>
   
                 <a href="https://instagram.com/mr_siddhant_bagul?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D">
