--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <img src="./Netflix-Images/BW12.webp" class="carousel-cell2" >
         <img src="./Netflix-Images/BW13.jpg" class="carousel-cell2" >
         <img src="./Netflix-Images/BW14.jpg" class="carousel-cell2" >
-        <img src="./Netflix-Images/BW15.jpg" class="carousel-cell2" >
+        <img src="./Netflix-Images/BW15.webp" class="carousel-cell2" >
         <img src="./Netflix-Images/BW16.jpg" class="carousel-cell2" >
         <img src="./Netflix-Images/BW17.jpg" class="carousel-cell2" >
         <img src="./Netflix-Images/BW18.jpg" class="carousel-cell2" > 
